Bug 400226.  Do text redisplay as soon as it's safe, not after a trip to the event loop.  r+sr=mats